--- a/ASProjektWPF/Pages/Profil.xaml
+++ b/ASProjektWPF/Pages/Profil.xaml
@@ -618,6 +618,87 @@
                     </Border>
                 </StackPanel>
             </Border>
+            <Border Margin="0,10,0,0" CornerRadius="5" Width="750">
+                <Border.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,2">
+                        <GradientStop Color="#e0e0e0" Offset="0.0"/>
+                        <GradientStop Color="#e0e0e0" Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.Background>
+                <StackPanel>
+                    <Border CornerRadius="5,5,0,0" Background="#dadada" Padding="5">
+                        <Label Content="Twoje zaaplikowania"/>
+                    </Border>
+                    <Grid x:Name="G_ApplicationInfo">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="150"/>
+                            <ColumnDefinition Width="100"/>
+                            <ColumnDefinition Width="100"/>
+                            <ColumnDefinition Width="100"/>
+                            <ColumnDefinition Width="auto"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto"/>
+                        </Grid.RowDefinitions>
+                        <TextBlock Text="Nazwa:" TextWrapping="Wrap" VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="10" FontSize="15"/>
+
+                        <TextBlock Text="Pozycja: " TextWrapping="Wrap" VerticalAlignment="Center" Grid.Column="2" FontSize="15"/>
+                    </Grid>
+                    <Border Padding="5">
+                        <StackPanel>
+                            <TextBlock x:Name="TxtB_Application_Info" Text="Jeszcze nie zaaplikowałeś się do żednej pracy" TextWrapping="Wrap"/>
+                            <ListView x:Name="LV_UserApplications" Background="Transparent" BorderThickness="0">
+                                <ListView.ItemContainerStyle>
+                                    <Style TargetType="ListViewItem">
+                                        <Setter Property="IsHitTestVisible" Value="True"/>
+                                        <Setter Property="Template">
+                                            <Setter.Value>
+                                                <ControlTemplate TargetType="ListViewItem">
+                                                    <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                                                        <ContentPresenter/>
+                                                    </Border>
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+                                </ListView.ItemContainerStyle>
+                                <ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <Border BorderBrush="Black" BorderThickness="0,1,0,0">
+                                            <Grid>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="*"/>
+                                                    <ColumnDefinition Width="auto"/>
+                                                </Grid.ColumnDefinitions>
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition/>
+                                                </Grid.RowDefinitions>
+                                                <Grid>
+                                                    <Grid.ColumnDefinitions>
+                                                        <ColumnDefinition Width="150"/>
+                                                        <ColumnDefinition Width="100"/>
+                                                        <ColumnDefinition Width="100"/>
+                                                        <ColumnDefinition Width="auto"/>
+                                                    </Grid.ColumnDefinitions>
+                                                    <Grid.RowDefinitions>
+                                                        <RowDefinition Height="auto"/>
+                                                    </Grid.RowDefinitions>
+                                                    <TextBlock Text="{Binding Name}" VerticalAlignment="Center" TextWrapping="Wrap" Grid.ColumnSpan="2" Margin="10"/>
+                                                    <Image Source="{Binding CompanyImage}" VerticalAlignment="Center"  Grid.Column="1" Height="50"/>
+                                                    <TextBlock Text="{Binding PositionName}" VerticalAlignment="Center"  TextWrapping="Wrap" Grid.Column="2" FontSize="15"/>
+                                                    <Button Grid.Column="3" Margin="10" Style="{StaticResource SearchButton}" VerticalAlignment="Center" Content="Zobacz" CommandParameter="{Binding .}" Click="Btn_GoToAnnouncment_Click"/>
+                                                </Grid>
+                                                <Button Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Cofnij aplikowanie" Style="{StaticResource ProfileDeleteButtonTheme}" Background="White" Foreground="Red" CommandParameter="{Binding .}" Click="Btn_DeleteApplication"/>
+                                            </Grid>
+                                        </Border>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                            </ListView>
+                        </StackPanel>
+                        
+                    </Border>
+                </StackPanel>
+            </Border>
         </StackPanel>
     </ScrollViewer>
 </Page>
